Modification des Noms des membres

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 
             <div class="team-grid">
                 <div class="team-card">
-                    <div class="team-avatar">A</div>
-                    <h3>Ateba</h3>
+                    <div class="team-avatar">Ke</div>
+                    <h3>KENGNE</h3>
                     <p class="role">Développeur Full-Stack</p>
                     <p class="description">Expert en gestion de branches et résolution de conflits</p>
                     <div class="team-skills">
@@ -112,8 +112,8 @@
                 </div>
 
                 <div class="team-card">
-                    <div class="team-avatar">As</div>
-                    <h3>Asta</h3>
+                    <div class="team-avatar">Ba</div>
+                    <h3>BABA</h3>
                     <p class="role">Développeur Backend</p>
                     <p class="description">Spécialiste des commandes Git avancées</p>
                     <div class="team-skills">
@@ -124,8 +124,8 @@
                 </div>
 
                 <div class="team-card">
-                    <div class="team-avatar">S</div>
-                    <h3>Shine</h3>
+                    <div class="team-avatar">No</div>
+                    <h3>NOUPIATCHE</h3>
                     <p class="role">Développeur Frontend</p>
                     <p class="description">Maître de la collaboration en équipe</p>
                     <div class="team-skills">
@@ -136,8 +136,8 @@
                 </div>
 
                 <div class="team-card">
-                    <div class="team-avatar">L</div>
-                    <h3>Lili</h3>
+                    <div class="team-avatar">As</div>
+                    <h3>ASSOUMOU</h3>
                     <p class="role">Développeur DevOps</p>
                     <p class="description">Gestionnaire de dépôts et workflows</p>
                     <div class="team-skills">
@@ -148,8 +148,20 @@
                 </div>
 
                 <div class="team-card">
-                    <div class="team-avatar">I</div>
-                    <h3>Idou</h3>
+                    <div class="team-avatar">Bi</div>
+                    <h3>BILOA</h3>
+                    <p class="role">Développeur QA</p>
+                    <p class="description">Testeur et validateur de code</p>
+                    <div class="team-skills">
+                        <span class="skill-tag">Testing</span>
+                        <span class="skill-tag">Validation</span>
+                        <span class="skill-tag">Documentation</span>
+                    </div>
+                </div>
+
+                <div class="team-card">
+                    <div class="team-avatar">Ta</div>
+                    <h3>TAMBA</h3>
                     <p class="role">Développeur QA</p>
                     <p class="description">Testeur et validateur de code</p>
                     <div class="team-skills">
