--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Groupe - Git & GitHub Mastery</title>
+    <title>Portfolio Groupe 5 - Git & GitHub Mastery</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/animations.css">
 </head>
@@ -13,7 +13,7 @@
         <div class="nav-container">
             <div class="logo">
                 <span class="logo-icon">🚀</span>
-                <span class="logo-text">DevTeam</span>
+                <span class="logo-text">Pat'Patrouille</span>
             </div>
             <ul class="nav-menu">
                 <li><a href="#accueil" class="nav-link active">Accueil</a></li>
