--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 
             <div class="team-grid">
                 <div class="team-card">
-                    <div class="team-avatar">A</div>
-                    <h3>Ateba</h3>
+                    <div class="team-avatar">M</div>
+                    <h3>Marcus</h3>
                     <p class="role">Développeur Full-Stack</p>
                     <p class="description">Expert en gestion de branches et résolution de conflits</p>
                     <div class="team-skills">
@@ -112,8 +112,8 @@
                 </div>
 
                 <div class="team-card">
-                    <div class="team-avatar">As</div>
-                    <h3>Asta</h3>
+                    <div class="team-avatar">R</div>
+                    <h3>Ruben</h3>
                     <p class="role">Développeur Backend</p>
                     <p class="description">Spécialiste des commandes Git avancées</p>
                     <div class="team-skills">
@@ -124,8 +124,8 @@
                 </div>
 
                 <div class="team-card">
-                    <div class="team-avatar">S</div>
-                    <h3>Shine</h3>
+                    <div class="team-avatar">R</div>
+                    <h3>Rocky</h3>
                     <p class="role">Développeur Frontend</p>
                     <p class="description">Maître de la collaboration en équipe</p>
                     <div class="team-skills">
@@ -136,8 +136,8 @@
                 </div>
 
                 <div class="team-card">
-                    <div class="team-avatar">L</div>
-                    <h3>Lili</h3>
+                    <div class="team-avatar">Z</div>
+                    <h3>Zuma</h3>
                     <p class="role">Développeur DevOps</p>
                     <p class="description">Gestionnaire de dépôts et workflows</p>
                     <div class="team-skills">
@@ -148,8 +148,8 @@
                 </div>
 
                 <div class="team-card">
-                    <div class="team-avatar">I</div>
-                    <h3>Idou</h3>
+                    <div class="team-avatar">S</div>
+                    <h3>Stella</h3>
                     <p class="role">Développeur QA</p>
                     <p class="description">Testeur et validateur de code</p>
                     <div class="team-skills">
@@ -335,7 +335,7 @@
                         <span class="info-icon">📧</span>
                         <div>
                             <h4>Email</h4>
-                            <p>equipe@devteam.com</p>
+                            <p>equipe@pat'patrouille.com</p>
                         </div>
                     </div>
 
@@ -343,7 +343,7 @@
                         <span class="info-icon">🔗</span>
                         <div>
                             <h4>GitHub</h4>
-                            <p>github.com/devteam-groupe</p>
+                            <p>github.com/pat'patrouille-groupe</p>
                         </div>
                     </div>
 
@@ -351,7 +351,7 @@
                         <span class="info-icon">💬</span>
                         <div>
                             <h4>Discord</h4>
-                            <p>DevTeam Community</p>
+                            <p>Pat'Patrouille Community</p>
                         </div>
                     </div>
                 </div>
@@ -369,7 +369,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
-            <p>&copy; 2025 DevTeam Portfolio. Créé par Ateba, Asta, Shine, Lili et Idou.</p>
+            <p>&copy; 2025 Pat'Patrouille Portfolio. Créé par Marcus, Ruben, Rocky, Zuma, Stella.</p>
             <div class="footer-links">
                 <a href="#accueil">Accueil</a>
                 <a href="#projet">Projet</a>
