commit 3: Modification globale, nom , style

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                 </div>
 
                 <div class="projet-card">
+                    <p>Configuration complète de Git et GitHub, 
                     <div class="card-icon">2️⃣</div>
-                    <h3>Installation Git & GitHub</h3>
-                    <p>Configuration complète de Git et GitHub, création de compte et initialisation avec la commande git config.</p>
+                    <h3>Installation Git & GitHub</h3>création de compte et initialisation avec la commande git config.</p>
                 </div>
 
                 <div class="projet-card">
