mise à jour des membres de l'equipe

--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
 
                 <div class="team-card">
                     <div class="team-avatar">As</div>
-                    <h3>Asta</h3>
-                    <p class="role">Développeur Backend</p>
+                    <h3>Assoumou</h3>
+                    <p class="role">DevOps</p>
                     <p class="description">Spécialiste des commandes Git avancées</p>
                     <div class="team-skills">
-                        <span class="skill-tag">Rebase</span>
-                        <span class="skill-tag">Stash</span>
-                        <span class="skill-tag">Cherry-pick</span>
+                        <span class="skill-tag">git</span>
+                        <span class="skill-tag">docker</span>
+                        <span class="skill-tag">github</span>
                     </div>
                 </div>
 
