Changement du texte du bouton dans index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h1 class="hero-title">Maîtrise de Git & GitHub</h1>
             <p class="hero-subtitle">Un projet collaboratif révolutionnaire</p>
             <p class="hero-description">Découvrez comment notre équipe de 5 développeurs a maîtrisé les commandes Git et la collaboration en ligne</p>
-            <button class="cta-button" onclick="scrollToSection('projet')">Découvrir le Projet</button>
+            <button class="cta-button" onclick="scrollToSection('projet')">Voir Notre Travail</button>
         </div>
         <div class="hero-animation">
             <div class="floating-box">
