Dernier commit : mise à jour du projet complet

--- a/index.html
+++ b/index.html
@@ -163,13 +163,13 @@
     </section>
 
     <!-- Compétences Section -->
-   <section id="competences" class="competences">
+<section id="competences" class="competences">
     <div class="container">
         <h2 class="section-title">Compétences Acquises</h2>
         <p class="section-subtitle">Maîtrise complète de Git et GitHub</p>
 
-        <div class="skills-container stagger-children">
-            <div class="skill-item">
+        <div class="skills-container mosaic-grid">
+            <div class="skill-item" data-progress="100">
                 <div class="skill-header">
                     <div class="skill-title">
                         <i class="fas fa-code-branch skill-icon"></i>
@@ -178,11 +178,11 @@
                     <span class="skill-percentage">100%</span>
                 </div>
                 <div class="progress-bar">
-                    <div class="progress-fill" style="width: 100%;"></div>
+                    <div class="progress-fill"></div>
                 </div>
             </div>
 
-            <div class="skill-item">
+            <div class="skill-item" data-progress="95">
                 <div class="skill-header">
                     <div class="skill-title">
                         <i class="fas fa-terminal skill-icon"></i>
@@ -191,11 +191,11 @@
                     <span class="skill-percentage">95%</span>
                 </div>
                 <div class="progress-bar">
-                    <div class="progress-fill" style="width: 95%;"></div>
+                    <div class="progress-fill"></div>
                 </div>
             </div>
 
-            <div class="skill-item">
+            <div class="skill-item" data-progress="98">
                 <div class="skill-header">
                     <div class="skill-title">
                         <i class="fab fa-github skill-icon"></i>
@@ -204,11 +204,11 @@
                     <span class="skill-percentage">98%</span>
                 </div>
                 <div class="progress-bar">
-                    <div class="progress-fill" style="width: 98%;"></div>
+                    <div class="progress-fill"></div>
                 </div>
             </div>
 
-            <div class="skill-item">
+            <div class="skill-item" data-progress="92">
                 <div class="skill-header">
                     <div class="skill-title">
                         <i class="fas fa-exclamation-triangle skill-icon"></i>
@@ -217,11 +217,11 @@
                     <span class="skill-percentage">92%</span>
                 </div>
                 <div class="progress-bar">
-                    <div class="progress-fill" style="width: 92%;"></div>
+                    <div class="progress-fill"></div>
                 </div>
             </div>
 
-            <div class="skill-item">
+            <div class="skill-item" data-progress="96">
                 <div class="skill-header">
                     <div class="skill-title">
                         <i class="fas fa-project-diagram skill-icon"></i>
@@ -230,11 +230,11 @@
                     <span class="skill-percentage">96%</span>
                 </div>
                 <div class="progress-bar">
-                    <div class="progress-fill" style="width: 96%;"></div>
+                    <div class="progress-fill"></div>
                 </div>
             </div>
 
-            <div class="skill-item">
+            <div class="skill-item" data-progress="94">
                 <div class="skill-header">
                     <div class="skill-title">
                         <i class="fas fa-code skill-icon"></i>
@@ -243,7 +243,7 @@
                     <span class="skill-percentage">94%</span>
                 </div>
                 <div class="progress-bar">
-                    <div class="progress-fill" style="width: 94%;"></div>
+                    <div class="progress-fill"></div>
                 </div>
             </div>
         </div>
