Modification de tous les fichiers

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                         <span class="info-icon">📧</span>
                         <div>
                             <h4>Email</h4>
-                            <p>equipe@devteam.com</p>
+                            <p>pat'ptrouille@gmail.com</p>
                         </div>
                     </div>
 
