--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Groupe 5 - Git & GitHub Mastery</title>
+    <title>Portfolio Groupe - Git & GitHub Mastery</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/animations.css">
 </head>
@@ -13,7 +13,7 @@
         <div class="nav-container">
             <div class="logo">
                 <span class="logo-icon">🚀</span>
-                <span class="logo-text">Pat'Patrouille</span>
+                <span class="logo-text">DevTeam</span>
             </div>
             <ul class="nav-menu">
                 <li><a href="#accueil" class="nav-link active">Accueil</a></li>
@@ -42,7 +42,7 @@
             <h1 class="hero-title">Maîtrise de Git & GitHub</h1>
             <p class="hero-subtitle">Un projet collaboratif révolutionnaire</p>
             <p class="hero-description">Découvrez comment notre équipe de 5 développeurs a maîtrisé les commandes Git et la collaboration en ligne</p>
-            <button class="cta-button" onclick="scrollToSection('projet')">Voir Notre Travail</button>
+            <button class="cta-button" onclick="scrollToSection('projet')">Découvrir le Projet</button>
         </div>
         <div class="hero-animation">
             <div class="floating-box">
@@ -71,9 +71,9 @@
                 </div>
 
                 <div class="projet-card">
-                    <p>Configuration complète de Git et GitHub, 
                     <div class="card-icon">2️⃣</div>
-                    <h3>Installation Git & GitHub</h3>création de compte et initialisation avec la commande git config.</p>
+                    <h3>Installation Git & GitHub</h3>
+                    <p>Configuration complète de Git et GitHub, création de compte et initialisation avec la commande git config.</p>
                 </div>
 
                 <div class="projet-card">
@@ -105,8 +105,8 @@
 
             <div class="team-grid">
                 <div class="team-card">
-                    <div class="team-avatar">M</div>
-                    <h3>Marcus</h3>
+                    <div class="team-avatar">A</div>
+                    <h3>Ateba</h3>
                     <p class="role">Développeur Full-Stack</p>
                     <p class="description">Expert en gestion de branches et résolution de conflits</p>
                     <div class="team-skills">
@@ -117,10 +117,9 @@
                 </div>
 
                 <div class="team-card">
-                 
-                    <div class="team-avatar">R</div>
-                    <h3>Ruben</h3>
-                    <p class="role">Développeur Backend</p>
+                    <div class="team-avatar">As</div>
+                    <h3>Assoumou</h3>
+                    <p class="role">DevOps</p>
                     <p class="description">Spécialiste des commandes Git avancées</p>
                     <div class="team-skills">
                         <span class="skill-tag">Git</span>
@@ -130,8 +129,8 @@
                 </div>
 
                 <div class="team-card">
-                    <div class="team-avatar">R</div>
-                    <h3>Rocky</h3>
+                    <div class="team-avatar">S</div>
+                    <h3>Shine</h3>
                     <p class="role">Développeur Frontend</p>
                     <p class="description">Maître de la collaboration en équipe</p>
                     <div class="team-skills">
@@ -142,13 +141,8 @@
                 </div>
 
                 <div class="team-card">
-<<<<<<<<< Temporary merge branch 1
-                    <div class="team-avatar">As</div>
-                    <h3>ASSOUMOU</h3>
-=========
-                    <div class="team-avatar">Z</div>
-                    <h3>Zuma</h3>
->>>>>>>>> Temporary merge branch 2
+                    <div class="team-avatar">L</div>
+                    <h3>Lili</h3>
                     <p class="role">Développeur DevOps</p>
                     <p class="description">Gestionnaire de dépôts et workflows</p>
                     <div class="team-skills">
@@ -159,25 +153,8 @@
                 </div>
 
                 <div class="team-card">
-<<<<<<<<< Temporary merge branch 1
-                    <div class="team-avatar">Bi</div>
-                    <h3>BILOA</h3>
-                    <p class="role">Développeur QA</p>
-                    <p class="description">Testeur et validateur de code</p>
-                    <div class="team-skills">
-                        <span class="skill-tag">Testing</span>
-                        <span class="skill-tag">Validation</span>
-                        <span class="skill-tag">Documentation</span>
-                    </div>
-                </div>
-
-                <div class="team-card">
-                    <div class="team-avatar">Ta</div>
-                    <h3>TAMBA</h3>
-=========
-                    <div class="team-avatar">S</div>
-                    <h3>Stella</h3>
->>>>>>>>> Temporary merge branch 2
+                    <div class="team-avatar">I</div>
+                    <h3>Idou</h3>
                     <p class="role">Développeur QA</p>
                     <p class="description">Testeur et validateur de code</p>
                     <div class="team-skills">
@@ -389,7 +366,7 @@
                         <span class="info-icon">🔗</span>
                         <div>
                             <h4>GitHub</h4>
-                            <p>github.com/pat'patrouille-groupe</p>
+                            <p>github.com/devteam-groupe</p>
                         </div>
                     </div>
 
@@ -397,7 +374,7 @@
                         <span class="info-icon">💬</span>
                         <div>
                             <h4>Discord</h4>
-                            <p>Pat'Patrouille Community</p>
+                            <p>DevTeam Community</p>
                         </div>
                     </div>
                 </div>
@@ -415,7 +392,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
-            <p>&copy; 2025 Pat'Patrouille Portfolio. Créé par Marcus, Ruben, Rocky, Zuma, Stella.</p>
+            <p>&copy; 2025 DevTeam Portfolio. Créé par Ateba, Assoumou, Shine, Lili et Idou.</p>
             <div class="footer-links">
                 <a href="#accueil">Accueil</a>
                 <a href="#projet">Projet</a>
@@ -430,7 +407,3 @@
     <script src="js/interactions.js"></script>
 </body>
 </html>
-<!-- Marc Etienne -->
-<!-- Assoumou Aloo Harold Didier -->
-<!-- Aymerick Baba -->
-<!-- Lyndsay -->
