--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
                     <div class="timeline-item">
                         <div class="timeline-marker"></div>
                         <div class="timeline-content">
-                            <h4>Phase 2: Apprentissage</h4>
-                            <p>Maîtrise des 100 commandes Git essentielles</p>
+                            <h4>Phase 2: comment apprendre a maitriser</h4>
+                            <p>Maîtrise des commandes Git essentielles</p>
                         </div>
                     </div>
 
