--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <span class="logo-text">DevTeam</span>
             </div>
             <ul class="nav-menu">
-                <li><a href="#accueil" class="nav-link active">Accueil</a></li>
+                <li><a href="#home" class="nav-link active">home</a></li>
                 <li><a href="#projet" class="nav-link">Projet</a></li>
                 <li><a href="#equipe" class="nav-link">Équipe</a></li>
                 <li><a href="#competences" class="nav-link">Compétences</a></li>
