hero section home

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section id="accueil" class="hero">
+    <section id="home" class="hero">
         <div class="hero-content">
             <h1 class="hero-title">Maîtrise de Git & GitHub</h1>
             <p class="hero-subtitle">Un projet collaboratif révolutionnaire</p>
