modification du resultatse

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 </section>
 
     <!-- Résultats Section -->
-    <section id="resultats" class="resultats">
+    <section id="resultat" class="resultat">
         <div class="container">
             <h2 class="section-title">Résultats & Statistiques</h2>
             <p class="section-subtitle">Les chiffres de notre succès</p>
