modification du numero

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="contact">
+    <section id="numero" class="numero">
         <div class="container">
             <h2 class="section-title">Nous Contacter</h2>
             <p class="section-subtitle">Restez connecté avec notre équipe</p>
