modification du footer

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         <div class="footer-content">
             <p>&copy; 2025 DevTeam Portfolio. Créé par Ateba, Assoumou, Shine, Lili et Idou.</p>
             <div class="footer-links">
-                <a href="#accueil">Accueil</a>
+                <a href="#home">homel</a>
                 <a href="#projet">Projet</a>
                 <a href="#equipe">Équipe</a>
                 <a href="#competences">Compétences</a>
